--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </header>
     <button id='magic-button'>Magic lies this way</button>
     <div id='my-target-element'></div>
+    <h2 id='my-target-element2'></h2>
   </body>
   <script src='./add-element.js'></script>
   <script src='./button-action.js'></script>
